--- a/package.json
+++ b/package.json
@@ -9,18 +9,54 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dynamic-labs/algorand": "^3.0.2",
+    "@dynamic-labs/cosmos": "^3.0.2",
+    "@dynamic-labs/ethereum": "^3.0.2",
+    "@dynamic-labs/flow": "^3.0.2",
+    "@dynamic-labs/sdk-react": "^0.18.30",
+    "@dynamic-labs/sdk-react-core": "^3.0.2",
+    "@dynamic-labs/solana": "^3.0.2",
+    "@dynamic-labs/starknet": "^3.0.2",
+    "@dynamic-labs/wagmi-connector": "^3.0.2",
+    "@hookform/resolvers": "^3.9.0",
+    "@pinata/sdk": "^2.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
+    "@story-protocol/react-sdk": "^0.0.1",
+    "@supabase/ssr": "^0.5.1",
+    "@supabase/supabase-js": "^2.45.4",
+    "@tanstack/react-query": "^5.56.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.441.0",
+    "next": "14.2.11",
+    "pinata": "^1.2.0",
+    "pinata-web3": "^0.4.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.11"
+    "react-hook-form": "^7.53.0",
+    "react-router-dom": "^6.26.2",
+    "supabase": "^1.192.5",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
+    "viem": "^2.21.7",
+    "wagmi": "^2.12.11",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.11",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.11"
+    "typescript": "^5"
   }
 }
